# kakekotoba

./: .gitignore  BUILD_STATUS.md  CLAUDE.md  CLAUDE_CONTEXT.md  Cargo.toml  NOTCURSES_BACKEND.md  QUICK_BUILD.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: ROADMAP.md  design-philosophy.md  initial-design-conversation-10-2025.md
src/: ast.rs  codegen.rs  error.rs  inference.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  pipeline.rs  repl.rs  sexp_parser.rs  types.rs
src/japanese/: characters.rs  keywords.rs  mod.rs  normalization.rs
src/layout/: blocks.rs  flow.rs  indentation.rs  mod.rs
src/spatial_ast/: mod.rs  nodes.rs  transformer.rs  visitor.rs
src/vertical/: direction.rs  mod.rs  position.rs  tokenizer.rs
tategaki-ed/: CLAUDE_CONTEXT.md  Cargo.toml  FLOATING_COMMAND_BAR_DESIGN.md  NUSHELL_COMPATIBILITY.md  TERMINAL_SUSPEND_ISSUE.md  test_vertical.txt
tategaki-ed/src/: lib.rs
tategaki-ed/src/backend/: adapter.rs  gpui_native.rs  keyboard.rs  mod.rs  selector.rs  terminal.rs
tategaki-ed/src/formats/: json.rs  markdown.rs  mod.rs  plain_text.rs  spatial_format.rs
tategaki-ed/src/gpui_interface/: cursor.rs  editor.rs  mod.rs  renderer.rs  scroll.rs  selection.rs
tategaki-ed/src/japanese/: character_handler.rs  input_method.rs  mod.rs  normalization.rs  ruby_text.rs
tategaki-ed/src/programming/: mod.rs
tategaki-ed/src/ratatui_interface/: cursor.rs  editor.rs  keyboard.rs  mod.rs  renderer.rs
tategaki-ed/src/spatial/: coordinates.rs  mod.rs  navigation.rs  selection.rs
tategaki-ed/src/text_engine/: buffer.rs  layout.rs  mod.rs  operations.rs
tategaki-ed/src/ui/: floating_bar.rs  mod.rs
tategaki-ed/tests/: file_format_tests.rs  integration.rs  mod.rs  vim_commands.rs
tests/: lib.rs
tests/codegen/: mod.rs
tests/inference/: mod.rs
tests/integration/: mod.rs  sexp_pipeline.rs
tests/lexer/: mod.rs
tests/parser/: mod.rs
