[package]
name = "kakekotoba"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A programming language combining Japanese keywords with Haskell-style types"
license = "MIT OR Apache-2.0"
keywords = ["compiler", "language", "japanese", "haskell", "llvm"]
categories = ["compilers", "development-tools"]

[dependencies]
# Core compiler dependencies
inkwell = { version = "0.4", features = ["llvm18-0"] }
unicode-segmentation = "1.10"
nom = "7.1"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }

# Enhanced Japanese text processing
unicode-normalization = "0.1"
unicode-categories = "0.1"
icu = "1.4"  # Unicode Collation Algorithm, text segmentation

# Alternative/complementary parsing
lalrpop = "0.20"  # LR parser generator alternative to nom
chumsky = "0.9"   # Parser combinator with better error recovery
rowan = "0.15"    # Lossless syntax trees (used by rust-analyzer)

# Error handling and diagnostics
miette = { version = "5.0", features = ["fancy"] }
ariadne = "0.4"   # Source code diagnostics
thiserror = "1.0"
anyhow = "1.0"

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.0"

[dev-dependencies]
proptest = "1.0"  # Property-based testing for compilers
insta = "1.0"     # Snapshot testing for parser/codegen output
criterion = "0.5" # Benchmarking
tempfile = "3.0"

[[bin]]
name = "kakekotoba"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
