[workspace]
resolver = "2"
members = [
    ".",
    "tategaki-ed"
]

[package]
name = "kakekotoba"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A programming language combining Japanese keywords with Haskell-style types"
license = "MIT OR Apache-2.0"
keywords = ["compiler", "language", "japanese", "haskell", "llvm"]
categories = ["compilers", "development-tools"]

[dependencies]
# Basic dependencies for the main language project
unicode-segmentation = "1.10"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"

# CLI utilities
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.0"  # Property-based testing for compilers
insta = "1.0"     # Snapshot testing for parser/codegen output
criterion = "0.5" # Benchmarking
tempfile = "3.0"

[[bin]]
name = "kakekotoba"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"