[package]
name = "tategaki-ed"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Vertical text editor for Japanese programming languages with dual GPUI/Ratatui interfaces"
license = "MIT OR Apache-2.0"
keywords = ["editor", "vertical-text", "japanese", "tategaki", "programming"]
categories = ["text-editors", "gui", "internationalization"]

[[bin]]
name = "tategaki-ed-gui"
path = "src/bin/gui.rs"
required-features = ["gpui"]

[[bin]]
name = "tategaki-ed-tui"
path = "src/bin/tui.rs"
required-features = ["ratatui"]

[[bin]]
name = "tategaki-ed-terminal"
path = "src/bin/terminal.rs"
required-features = ["notcurses"]

[features]
default = ["gpui", "notcurses"]
gpui = ["dep:gpui", "dep:cosmic-text"]
ratatui = ["dep:ratatui", "dep:crossterm"]
notcurses = ["dep:libnotcurses-sys"]

[dependencies]
# Core text processing
unicode-segmentation = "1.10"
unicode-bidi = "0.3"
unicode-normalization = "0.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }

# GPUI interface (optional)
gpui = { git = "https://github.com/zed-industries/zed", optional = true }
cosmic-text = { version = "0.10", optional = true }

# Ratatui interface (optional)
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

# Notcurses terminal interface (optional)
libnotcurses-sys = { version = "3.9", optional = true }
libc = "0.2"
nix = { version = "0.27", features = ["term"] }

# Integration with main compiler
kakekotoba = { path = ".." }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
proptest = "1.0"

[package.metadata.docs.rs]
all-features = true